# kde2-kdenetwork

./: CMakeLists.txt  Makefile.am  README  config.h.bot  configure.in.in  kdenetwork.lsm  kdenetwork.spec.in
kdict/: Makefile.am  README  actions.cpp  actions.h  application.cpp  application.h  dcopinterface.h  dict.cpp  dict.h  kdict.desktop  kdictui.rc  main.cpp  matchview.cpp  matchview.h  options.cpp  options.h  queryview.cpp  queryview.h  sets.cpp  toplevel.cpp  toplevel.h
kdict/applet/: Makefile.am  kdictapplet.cpp  kdictapplet.desktop  kdictapplet.h
kit/: AUTHORS  Makefile.am  README  TODO  aim.cpp  aim.h  eventsrc  kit.cpp  kit.desktop  kitapp.cpp  kitapp.h  kitawaypicker.cpp  kitawaypicker.h  kitdirectorysearch.cpp  kitdirectorysearch.h  kithtmlpart.cpp  kithtmlpart.h  kitpasswordchanger.cpp  kitpasswordchanger.h  kitprofileeditor.cpp  kitprofileeditor.h  kitprofileinfo.cpp  kitprofileinfo.h  kitsocket.cpp  kitsocket.h  kituserprofile.cpp  kituserprofile.h  taim.cpp  taim.h  tbuddylist.cpp  tbuddylist.h  tdockwindow.cpp  tdockwindow.h  tedit.cpp  tedit.h  tmessage.cpp  tmessage.h  tsfbuffer.cpp  tsfbuffer.h  twindow.cpp  (+2 more)
kit/icons/actions/: Makefile.am
knewsticker/: AUTHORS  CMakeLists.txt  Makefile.am  TODO  eventsrc  knewsticker.cpp  knewsticker.desktop  knewsticker.h  knewsticker.upd  newsscroller.cpp  newsscroller.h
knewsticker/common/: CMakeLists.txt  Makefile.am  configaccess.cpp  configaccess.h  configiface.h  newsengine.cpp  newsengine.h  newsiconmgr.cpp  xmlnewsaccess.cpp  xmlnewsaccess.h
knewsticker/kcmnewsticker/: CMakeLists.txt  Makefile.am  kcmnewsticker.cpp  kcmnewsticker.desktop  kcmnewsticker.h  kcmnewstickerwidget.ui  newssourcedlg.ui  newssourcedlgimpl.cpp  newssourcedlgimpl.h
knewsticker/knewstickerstub/: CMakeLists.txt  Makefile.am  knewstickerstub.cpp  knewstickerstub.desktop
knewsticker/kntsrcfilepropsdlg/: CMakeLists.txt  Makefile.am  kntsrcfilepropsdlg.cpp  kntsrcfilepropsdlg.desktop  kntsrcfilepropsdlg.h  kntsrcfilepropsdlgwidget.ui
knewsticker/testcases/: version-0.9.dtd  version-0.9.rss  version-0.91.dtd  version-0.91.rss  version-0.92.rss  version-1.0.rss
ksirc/: CMakeLists.txt  ChangeLog  FilterRuleEditor.cpp  FilterRuleEditorData.cpp  FilterRuleEditorData.h  KSircColour.cpp  KSircColour.h  Makefile.am  NewWindowDialog.cpp  NewWindowDialog.h  TODO  ahistlineedit.cpp  ahistlineedit.h  alistbox.cpp  alistbox.h  baserules.cpp  baserules.h  chanparser.cpp  chanparser.h  config.h  configure.in.in  dccDialog.cpp  dccDialogData.cpp  dccDialogData.h  displayMgr.cpp  displayMgr.h  displayMgrMDI.cpp  displayMgrMDI.h  displayMgrSDI.cpp  displayMgrSDI.h  dsirc  filters.pl  ioBroadcast.cpp  ioBroadcast.h  ioDCC.cpp  ioDCC.h  ioDiscard.cpp  ioDiscard.h  ioLAG.cpp  ioLAG.h  (+32 more)
ksirc/KSColourPicker/: Makefile.am  kscolourpicker.cpp  kscolourpickerData.cpp  kscolourpickerData.h
ksirc/KSOpenkSirc/: Makefile.am  open_ksirc.cpp  open_ksirc.h  open_ksircData.ui  serverDataType.h  serverFileParser.cpp
ksirc/KSPrefs/: Makefile.am  UserMenuRef.cpp  UserMenuRefData.cpp  UserMenuRefData.h  defaultfilters.cpp  defaultfiltersdata.cpp  defaultfiltersdata.h  general.cpp  generalData.cpp  generalData.h  ksprefs.cpp  ksprefs.h  serverchannel.cpp  serverchannel.h  serverchanneldata.cpp  serverchanneldata.h  startup.cpp  startup.h  startupdata.cpp  startupdata.h
ksirc/KSPrefsTNG/: Makefile.am  ksprefs.cpp  ksprefs.h  page_colors.cpp  page_colors.h  page_colorsbase.ui  page_general.cpp  page_general.h  page_generalbase.ui  page_rmbmenu.cpp  page_rmbmenu.h  page_rmbmenubase.ui  page_servchan.cpp  page_servchan.h  page_servchanbase.ui  page_startup.cpp  page_startup.h  page_startupbase.ui
ksirc/KSProgress/: Makefile.am  ksprogress.cpp  ksprogressdata.cpp
ksirc/KSTicker/: Makefile.am  kspainter.cpp  ksticker.cpp  ksticker.h  main.cpp  main.h  speeddialog.cpp  speeddialogData.cpp  speeddialogData.h
ksirc/KSircListBox/: Makefile.am  irclistbox.cpp  irclistbox.h  irclistitem.cpp  irclistitem.h  kspainter.cpp  kspainter.h
ksirc/img/: CMakeLists.txt  Makefile.am  ksirc_dock.xpm
ksirc/puke/: Makefile.am  controller.cpp  controller.h  ksirclistbox.cpp  ksirclistbox.h  ksirclistbox.pm  load_all.pm  palistbox.cpp  palistbox.h  pbutton.cpp  pbutton.h  pframe.cpp  pframe.h  pkfiledialog.cpp  pkfiledialog.h  plabel.cpp  plabel.h  playout.cpp  plined.cpp  plined.h  plistbox.cpp  plistbox.h  pmenudta.cpp  pmessage.h  pobject.cpp  pobjfinder.cpp  pobjfinder.h  ppopmenu.cpp  ppopmenu.h  pprogress.cpp  pprogress.h  ppushbt.cpp  ppushbt.h  ptabdialog.cpp  ptablevw.cpp  ptablevw.h  pwidget.cpp
ktalkd/kcmktalkd/: Makefile.am  answmachpage.cpp  answmachpage.h  forwmachpage.cpp  forwmachpage.h  kcmktalkd.desktop  main.cpp  main.h  soundpage.cpp  soundpage.h
ktalkd/kotalkd/: Makefile.am  includ.h  kotalkd.c  print.c  print.h  process.c  process.h  vsnprintf.c
ktalkd/ktalkd/: Makefile.am  announce.cpp  find_user.cpp  includ.h  ktalkdrc  print.cpp  print.h  readcfg++.cpp  readconf.cpp  readconf.h  talkd.cpp  unixsock.cpp
ktalkd/ktalkd/machines/: answmach.cpp  (+3 more)
ktalkd/ktalkdlg/: Makefile.am  ktalkdlg.cpp
lanbrowsing/kcmlisa/: Makefile.am  findnic.cpp  findnic.h  kcmkiolan.cpp  kcmkiolan.h  kcmlisa.cpp  kcmlisa.h  kcmreslisa.cpp  kcmreslisa.h  lanbrowser.desktop  main.cpp  main.h  portsettingsbar.cpp  portsettingsbar.h
lanbrowsing/kio_lan/: Makefile.am  kio_lan.cpp  kio_lan.h  lan.desktop  lan.protocol  rlan.protocol
lanbrowsing/lisa/: ChangeLog  Makefile.am  README  addressvalidator.cpp  addressvalidator.h  client.cpp  configfile.cpp  configfile.h  getdebug.cpp  getdebug.h  ipaddress.cpp  ipaddress.h  lisadefines.h  main.cpp  mapentry.h  mystring.cpp  netmanager.cpp  netmanager.h  netscanner.cpp  netscanner.h  simplelist.cpp  simplelist.h  strictmain.cpp  tcpnode.h
libkdenetwork/: CMakeLists.txt  Makefile.am  README  kmimetypevalidator.cpp  kmimetypevalidator.h  kpgp.cpp  kpgp.h  kpgpbase.cpp  kpgpbase.h  kregexp3.cpp  kregexp3.h  kscoring.cpp  kscoring.h  kscoringeditor.cpp  kscoringeditor.h  kwidgetlister.cpp  kwidgetlister.h  qregexp3.cpp  qregexp3.h
(+329 files in other folders)
