KDE_CXXFLAGS = $(USE_EXCEPTIONS)

INCLUDES= $(all_includes)

# you can add here more. This one gets installed
noinst_LTLIBRARIES = libkscolourpicker.la

libkscolourpicker_la_SOURCES = kscolourpicker.cpp kscolourpickerData.cpp

noinst_HEADERS = kscolourpicker.h kscolourpickerData.h

libkscolourpicker_la_METASOURCES = USE_AUTOMOC


