kde2_stdicon()

install(
    FILES
        arrow.png
        blueball.png
        bluepin.png
        channel.xpm
        channels.xpm
        greenpin.png
        info.png
        info1.png
        ksirc.png
        ksirc_a.xpm
        ksirc_b.xpm
        ksirc_dock.xpm
        madsmiley.png
        mini-run.png
        server.xpm
        smiley.png
        star.png
    DESTINATION ${KDE2_DATADIR}/ksirc/pics
    )
